@@ -10,6 +10,7 @@ Changes in Release 1.1.3
 [SC-77] - StoredId doesn't carry over old (computed Id) values correctly
 [SC-78] - AACLI fail testing storedId
 [SC-79] - Configuration Reloading only works when RetryAttempts are configured
+[SC-80] - positional parameters do not get substituted in Mapped attr defs 
 
 Changes in Release 1.1.2
 =============================================
